[tool.poetry]
name = "pinger"
version = "0.1.0"
description = ""
authors = ["Nikita Marshalkin <marnikitta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
typer = "^0.15.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
